--- a/src/rovernavigator/PanelResults.form
+++ b/src/rovernavigator/PanelResults.form
@@ -113,7 +113,7 @@
               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
-              <Component id="labelTestResults" min="-2" pref="226" max="-2" attributes="0"/>
+              <Component id="labelTestResults" pref="257" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
